# cpp-experiments

./: README.md  auto-compile.sh  meson.build
include/cppexp/: coroutine.hpp  deleter.hpp  generator.hpp  job.hpp  multi_jthread.hpp  stop_token.hpp  task.hpp  thread_pool.hpp  unique_ressource.hpp
source/: main.cpp
source/cppexp/: deleter.cpp  multi_jthread.cpp  stop_token.cpp
